// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emptySpace > should work with border 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_bordered_true__a1urqq1 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <img
            alt=""
            class="styles_large__a1urqq6"
            src="/src/components/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <img
            alt="kapsule logo"
            src="/src/components/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with learn more 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
          <a
            class="styles__1dtqm9e0 styles_prominence_default__1dtqm9e3 styles_sentiment_info__1dtqm9e2 styles_oneLine_false__1dtqm9e8 styles_variant_bodyStrong__1dtqm9eb styles_type_standalone__1dtqm9ed styles_undefined_compound_4__1dtqm9ei styles__1dtqm9en"
            data-variant="standalone"
            href="https://scaleway.com"
          >
            Learn more
            <svg
              class="styles__1dtqm9ep styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with primary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with secondary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_small__a1urqq4 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <h2
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_25__m4c9ow24"
              style="--textAlign__qabug40: center;"
            >
              test
            </h2>
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work without parameters 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__a1urqq0 styles_size_large__a1urqq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__a1urqq5 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1.5rem_xxsmall__toi52u41 styles_justifyContent_center_xxsmall__toi52u61"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
              style="--textAlign__qabug40: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_center_xxsmall__toi52u61"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
